--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "15.5.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "recharts": "^3.2.0",
     "tailwind-merge": "^3.3.1",
     "xlsx": "^0.18.5"
